--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+appdirs==1.4.3
+attrs==19.1.0
+black==19.3b0
+Click==7.0
 Django==2.2.1
 numpy==1.16.3
+pandas==0.24.2
+python-dateutil==2.8.0
 pytz==2019.1
+six==1.12.0
 sqlparse==0.3.0
+toml==0.10.0
