--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ attrs==19.1.0
 black==19.3b0
 Click==7.0
 Django==2.2.1
+django-bootstrap4==0.0.8
+isort==4.3.20
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 numpy==1.16.3
 pandas==0.24.2
 python-dateutil==2.8.0
