--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       - "8000:8000"
     stdin_open: true
     tty: true
-    # env_file:
-    #  - .env
+    env_file:
+     - .env
     # depends_on:
     #   - db
 networks:
