--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
 appdirs==1.4.3
 attrs==19.1.0
+backcall==0.1.0
 black==19.3b0
 Click==7.0
+decorator==4.4.0
 Django==2.2.1
 django-bootstrap4==0.0.8
+ipdb==0.12
+ipython==7.5.0
+ipython-genutils==0.2.0
 isort==4.3.20
+jedi==0.14.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 numpy==1.16.3
 pandas==0.24.2
+parso==0.5.0
+pexpect==4.7.0
+pickleshare==0.7.5
+prompt-toolkit==2.0.9
 psycopg2-binary==2.8.3
+ptyprocess==0.6.0
+Pygments==2.4.2
 python-dateutil==2.8.0
 pytz==2019.1
 six==1.12.0
 sqlparse==0.3.0
 toml==0.10.0
+traitlets==4.3.2
+wcwidth==0.1.7
+whitenoise==4.1.2
